--- a/app/views/dashboard/_community_dashboard.html.erb
+++ b/app/views/dashboard/_community_dashboard.html.erb
@@ -7,7 +7,7 @@
     </div>
   </div>
     
-  <div class="community" style="overflow:scroll; height:345px;">
+  <div class="community" style="overflow:auto; height:345px; overflow-x:hidden">
     <% @community_questions.each do |question| %>
       <div class="row">
         <div class="col-xs-2 text-center">
