--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -79,78 +79,74 @@
 
         <div class="col-xs-12 col-md-6">
           <div class="my-question-pannel">
-            <div class="row">
-              <div class="col-xs-12 text-center">
-                <div class="title-question-panel">
-                  <h4>My Questions</h4>
-                </div>
-              </div>
+              
+            <div class="title-question-panel text-center">
+              <h4>My Questions</h4>
             </div>
+              
+            
 
-            <div class="row data-question-pannel" style="overflow:scroll; height:130px;">
-              <div class="col-xs-12">
-                <% @questions.each do |question| %>
-                  <p class="question-data">
+            <div style="overflow:auto; height:130px; overflow-x:hidden">
+              
+              <% @questions.each do |question| %>
+                <p class="question-data">
 
-                    <% course_name = get_lesson_title(question.course_name, question.lesson_id) %>
-                    <strong style="color:#ec6952">
-                      <%= link_to question.title, question_path(question) %>
-                    </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %>
-                  </p>
-                <% end %>
+                  <% course_name = get_lesson_title(question.course_name, question.lesson_id) %>
+                  <strong style="color:#ec6952">
+                    <%= link_to question.title, question_path(question) %>
+                  </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if question.resolved %>
+                </p>
+              <% end %>
 
-                <% if @questions.empty? %>
-                  <p class="text-center">
-                    You haven't asked any questions yet.
-                  </p>
-                <% end %>
-              </div>
+              <% if @questions.empty? %>
+                <p class="text-center">
+                  You haven't asked any questions yet.
+                </p>
+              <% end %>
+              
             </div>
 
             <% unless @questions.empty? %>
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
-                </div>
+
+              <div class="text-center">
+                <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
               </div>
+              
             <% end %>
           </div>
         </div> <!-- myquestions pannel -->
 
         <div class="col-xs-12 col-md-6">
-          <div class="my-submissions-pannel">
-            
-            <div class="row">
-              <div class="col-xs-12 text-center">
-                <div class="title-submissions-panel">
-                  <h4>My Submissions</h4>
-                </div>
-              </div>
+          <div class="my-submissions-pannel">   
+            <div class="title-submissions-panel text-center">
+              <h4>My Submissions</h4>
             </div>
+              
+            <div style="overflow:auto; height:130px; overflow-x:hidden">
+              <% @submissions.each do |submission| %>
+                
+                <p class="submissions-data">
+                  <% course_name = get_lesson_title(submission.course_name, submission.lesson_id) %>
+                  <strong style="color:#ec6952">
+                    <%= link_to submission.title, submission_path(submission) %>
+                  </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %>  
+                </p>
+                
+              <% end %>
 
-            <div class="row data-submissions-pannel" style="overflow:scroll; height:130px;">
-              <div class="col-xs-12">
-                <% @submissions.each do |submission| %>
-                  <p class="submissions-data">
-                    <% course_name = get_lesson_title(submission.course_name, submission.lesson_id) %>
-                    <strong style="color:#ec6952">
-                      <%= link_to submission.title, submission_path(submission) %>
-                    </strong>in <%= course_name %> <%= '<i class="fa fa-check-circle" style="margin-left: 5px; color: #5cb85c;" aria-hidden="true"></i>'.html_safe if submission.approved %>  
-                  </p>
-                <% end %>
-
-                <% if @submissions.empty? %>
-                  <p class="text-center">You don't have any submissions yet.</p>
-                <% end %>
-              </div>
+              <% if @submissions.empty? %>
+              
+                <p class="text-center">You don't have any submissions yet.</p>
+                
+              <% end %>
             </div>
 
             <% unless @submissions.empty? %>
-              <div class="row">
-                <div class="col-xs-12 text-center">
-                  <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
-                </div>
+              
+              <div class="text-center">
+                <h5><%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
               </div>
+
             <% end %>
           </div>
         </div>
