--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -3,7 +3,7 @@
 </p>  
 
 <p>
-  Let's get ready to learn some commands! :) This lesson is going to be an overview of the commands used most. It won't cover all of the commands, but only the necessary ones to get you started.
+  Let's get ready to learn some commands! This lesson is going to be an overview of the commands used most. It won't cover all of the commands, but only the necessary ones to get you started.
 </p>
 
 <p>
