--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -27,7 +27,7 @@
                     </div><!--//navbar-header-->
                     <div id="navbar-collapse" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="nav-item nav-item-main-site"><%= link_to 'Apply Now', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %></li>
+                            <li class="nav-item nav-item-main-site"><%= link_to 'Apply Now', apply_path, class: 'btn btn-cta btn-cta-primary' %></li>
                             <li class="nav-item nav-item-main-site last"><a href="/"><i class="fa fa-home"></i> Back to main site</a></li>
                         </ul><!--//nav-->
                                                           
