--- a/app/views/dashboard/_community_dashboard.html.erb
+++ b/app/views/dashboard/_community_dashboard.html.erb
@@ -1,11 +1,10 @@
 <div class="community-panel">
-  <div class="row">
-    <div class="col-xs-12 text-center">
-      <div class="title-community-panel">
-        <h4>Community</h4>
-      </div>
-    </div>
+    
+  <div class="title-community-panel text-center">
+    <h4>Community</h4>
   </div>
+    
+  
     
   <div class="community" style="overflow:auto; height:345px; overflow-x:hidden">
     <% @community_questions.each do |question| %>
@@ -15,26 +14,26 @@
         </div>
 
         <div class="col-xs-8 community-pannel-question-detail">
-          <div class="row">
-            <p class="col-xs-12 title-community-question">
-              <strong><%= link_to question.title, question_path(question.id) %></strong>
-            </p>
-            <p class="col-xs-12 time-community-question">
-              <%= time_ago_in_words(question.created_at) %> ago by <%= question.user_name %>
-            </p>
-            <p class="col-xs-12 tags-community-question">
-              <% if question.mentor_post %>
-                <span>MENTOR POST</span>
-              <% else %>
-                <a href="/<%= question.course_name.underscore %>s">
-                  <span><%= question.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson").upcase %></span>
-                </a>
-                <a href="/<%= question.course_name.underscore %>s/<%= question.lesson_id %>">
-                  <span><%= question.course_name.constantize::LESSONS[question.lesson_id.to_i - 1].title %></span>
-                </a>
-              <% end %> 
-            </p>
-          </div> 
+          
+          <p class="title-community-question">
+            <strong><%= link_to question.title, question_path(question.id) %></strong>
+          </p>
+          <p class="time-community-question">
+            <%= time_ago_in_words(question.created_at) %> ago by <%= question.user_name %>
+          </p>
+          <p class="tags-community-question">
+            <% if question.mentor_post %>
+              <span>MENTOR POST</span>
+            <% else %>
+              <a href="/<%= question.course_name.underscore %>s">
+                <span><%= question.course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson").upcase %></span>
+              </a>
+              <a href="/<%= question.course_name.underscore %>s/<%= question.lesson_id %>">
+                <span><%= question.course_name.constantize::LESSONS[question.lesson_id.to_i - 1].title %></span>
+              </a>
+            <% end %> 
+          </p>
+          
         </div>
 
         <div class="col-xs-2 text-center user-interaction-info">
@@ -50,14 +49,14 @@
     <% end %>
   </div>
     
-  <div class="row">
-    <div class="col-xs-12 text-center">
-      <h5>
-        <a href="/community">
-          <i class="fa fa-caret-right" aria-hidden="true"></i>
-          View all
-        </a>
-      </h5>
-    </div>
+  
+  <div class="text-center">
+    <h5>
+      <a href="/community">
+        <i class="fa fa-caret-right" aria-hidden="true"></i>
+        View all
+      </a>
+    </h5>
   </div>
+  
 </div>
