--- a/app/views/ruby_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_4.html.erb
@@ -91,7 +91,7 @@ put "Today's an awesome day for coding!"
 </code></pre>
 
 <p>
-  Your file should now look like this:
+  Change your file to look like this:
 </p>
 
 <pre><code class="ruby">
@@ -127,7 +127,7 @@ hello.rb:2:in `&lt;main&gt;': undefined method `put' for main:Object (NoMethodEr
 </ul>
 
 <p>
-  With this information, we can start debugging the program. The bug here is the <code>put</code> isn't a command in Ruby - instead it should be <code>puts</code>.
+  With this information, we can start debugging the program. The bug here is that <code>put</code> isn't a command in Ruby - instead it should be <code>puts</code>.
 </p>
 
 <pre><code class="ruby">
@@ -167,14 +167,14 @@ put "Today's an awesome day for coding!"
 
 <h2>Conclusion</h2>
 
-<ul>
+<ol>
   <li>Ruby files are saved with a <code>.rb</code> extension</li>
   <li><code>puts</code> is a command that prints out a string with a line break</li>
   <li><strong>Strings are a set of characters, that are declared inside <code>" "</code>s or <code>' '</code>s.</strong></li>
   <li>You can run a Ruby program with the <code>ruby</code> command</li>
   <li>Error messages tell us what we are doing wrong</li>
   <li>As a programmer, you will face many error messages every day - the key is to be calm and tackle the problem</li>
-</ul>
+</ol>
 
 <h2>Coding Challenge</h2>
 
