add phone and remove prework

--- a/app/views/apply/_application_form.html.erb
+++ b/app/views/apply/_application_form.html.erb
@@ -52,12 +52,12 @@
           <%= f.email_field :email, required: true, class: 'form-control', placeholder: 'Your email' %>
         </div>
 
-<!--         <div class="col-xs-12 col-md-6">
-          <%= f.label :mobile_number %><br />
-          <%= f.number_field :mobile_number, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
+        <div class="col-xs-12 col-md-6">
+          <%= f.label :phone %><br />
+          <%= f.number_field :phone, required: true, class: 'form-control', placeholder: 'Your Mobile Number' %>
         </div>
 
-        <div class="col-xs-12 col-md-6">
+<!--         <div class="col-xs-12 col-md-6">
           <%= f.label :facebook_handle %><br />
           <%= f.text_field :facebook_handle, autocomplete: "off", class: 'form-control', placeholder: 'john.smith' %>
         </div> -->
