--- a/app/views/apply/immersive_next_steps.html.erb
+++ b/app/views/apply/immersive_next_steps.html.erb
@@ -5,21 +5,14 @@
 <div class="next-steps-container">
   <div class="row">
     <div class="col-xs-12 col-md-6">
-      <p>Congratulations on your first step in enrolling in <strong>TECHRISE Core Immersive</strong>!</p>
+      <p>Congratulations on completing your first step in enrolling in <strong>TECHRISE Core Immersive</strong>!</p>
+
       <p>
-        In order to be admitted as a full time student, you must first complete a set of simple HTML/CSS pre-work assignments. <strong>The pre-work will expire in 4 days after you activate it</strong>, but it should not take more than a couple hours.
+        To get started, <strong>we will call your mobile number</strong> that you have provided to schedule a time for your enrollment. <strong>If you want to get started immediately, please message us on our <%= link_to 'Facebook account', 'https://www.facebook.com/techrisenepal/', target: '_blank' %></strong>. 
       </p>
 
       <p>
-        <strong>The purpose of the pre-work assignments is to test your motivation - not your knowledge on programming. There is absolutely no need for prior experience to complete these assignments.</strong>
-      </p>
-
-      <p>
-        After the pre-work assignments are all completed and approved, you will be called in for an interview.
-      </p>
-
-      <p>
-        In the meanwhile, <strong>please confirm your email address</strong>. A confirmation email has been sent to your email address.
+        <strong>We have given you free access to our Introduction to Software Engineering course</strong> that you can get started right away, once you have confirmed your email address.
       </p>
 
       <p>
@@ -38,6 +31,6 @@
   <hr>
 
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <%= link_to 'Log in and Start Your Prework Assignments', new_user_session_path, class: 'btn btn-block btn-cta btn-cta-primary' %>
+    <%= link_to 'Start Introduction to Software Engineering Course', new_user_session_path, class: 'btn btn-block btn-cta btn-cta-primary' %>
   </div>
 </div><!-- next-steps-container -->
