--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -44,7 +44,7 @@
 
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block', style: 'margin-top: 30px;' %>
+            <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
           </div>
         </div>
 
@@ -87,7 +87,7 @@
       <h1><strong>Phase 2</strong> <span class="phase-name">Web Development Fundamentals</span></h1>
 
       <h4>
-        Build your first Ruby on Rails application.
+        Build your first Ruby on Rails application<br> and learn the MVC framework.
       </h4>
 
       <div class="row">
@@ -112,10 +112,10 @@
     </div>
 
     <div class="phase">
-      <h1><strong>Phase 4</strong> <span class="phase-name">Build Your Second Application</span></h1>
+      <h1><strong>Phase 4</strong> <span class="phase-name">User Features and SNS</span></h1>
 
       <h4>
-        Build a complete mock of the popular Instagram application.
+        Build a mock of Instagram, complete with photo uploading, user authentication, and other SNS features.
       </h4>
 
       <div class="row">
@@ -126,10 +126,24 @@
     </div>
 
     <div class="phase">
-      <h1><strong>Phase 5</strong> <span class="phase-name">Testing and Test Driven Development</span></h1>
+      <h1><strong>Phase 5</strong> <span class="phase-name">Javascript, APIs, and Advanced Rails</span></h1>
 
       <h4>
-        Learn Test Driven Development (TDD) and learn to build tested, quality applications.
+        Build a fluid online movie review SNS by using AJAX, external APIs, and implementing software engineering best practices.
+      </h4>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <%= image_tag 'details/filmster.png', class: 'screenshot img-responsive' %>
+        </div>
+      </div>
+    </div>
+
+    <div class="phase">
+      <h1><strong>Phase 6</strong> <span class="phase-name">Testing and Test Driven Development</span></h1>
+
+      <h4>
+        Learn the industry standard of Test Driven Development<br> to build tested, quality applications.
       </h4> 
 
       <div class="row">
@@ -221,7 +235,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-4">
-        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block' %>
+        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block' %>
       </div>
     </div>
   </div><!-- container -->
