--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -8,7 +8,7 @@
       <div class="col-xs-12 col-md-6">
         <h1>Immersive Program Highlights</h1> 
 
-        <p class="program-highlights-details">Immersive | 8 weeks | 11,980 NPR</p>
+        <p class="program-highlights-details">Immersive | 8 weeks | 12,000 NPR</p>
 
         <p class="program-highlights-description">
           TECHRISE focuses on maximizing the student's learning progress and providing various opportunities.
@@ -18,6 +18,8 @@
         <span class="highlight-checkbox">16 Personal Mentor Sessions at the TECHRISE Campus</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
         <span class="highlight-checkbox">Ask questions and interact with community members</span>        
+
+        
 
         <!-- <span class="highlight-checkbox">Workshops/Review Sessions</span>
         <span class="highlight-checkbox">Outside Speakers from the industry</span>
@@ -38,7 +40,7 @@
           
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-secondary center-block', style: 'margin-top: 30px;' %>
+            <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary btn-lg center-block', style: 'margin-top: 30px;' %>
           </div>
         </div>
         
@@ -81,7 +83,7 @@
       <h1><strong>Phase 2</strong> <span class="phase-name">Web Development Fundamentals</span></h1>
 
       <h4>
-        Build your first Ruby on Rails application.
+        Build your first Ruby on Rails application<br> and learn the MVC framework.
       </h4>
 
       <div class="row">
@@ -106,10 +108,10 @@
     </div>
 
     <div class="phase">
-      <h1><strong>Phase 4</strong> <span class="phase-name">Build Your Second Application</span></h1>
+      <h1><strong>Phase 4</strong> <span class="phase-name">User Features and SNS</span></h1>
 
       <h4>
-        Build a complete mock of the popular Instagram application.
+        Build a mock of Instagram, complete with photo uploading, user authentication, and other SNS features.
       </h4>
 
       <div class="row">
@@ -120,10 +122,24 @@
     </div>
 
     <div class="phase">
-      <h1><strong>Phase 5</strong> <span class="phase-name">Testing and Test Driven Development</span></h1>
+      <h1><strong>Phase 5</strong> <span class="phase-name">Javascript, APIs, and Advanced Rails</span></h1>
 
       <h4>
-        Learn Test Driven Development (TDD) and learn to build tested, quality applications.
+        Build a fluid online movie review SNS by using AJAX, external APIs, and implementing software engineering best practices.
+      </h4>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+          <%= image_tag 'details/filmster.png', class: 'screenshot img-responsive' %>
+        </div>
+      </div>
+    </div>
+
+    <div class="phase">
+      <h1><strong>Phase 6</strong> <span class="phase-name">Testing and Test Driven Development</span></h1>
+
+      <h4>
+        Learn the industry standard of Test Driven Development<br> to build tested, quality applications.
       </h4> 
 
       <div class="row">
@@ -194,7 +210,7 @@
   <div class="container">
     <h1>Tuition Fees</h1>
     <div class="payment-details">
-      <div class="payment-price">11,980 NPR</div>
+      <div class="payment-price">12,000 NPR</div>
 
       <div class="row">
         <div class="col-xs-12 col-md-4">
@@ -219,32 +235,15 @@
         </div>
       </div><!-- row -->
     </div><!-- payment-details -->
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-4">
+        <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary btn-block text-center' %>
+      </div>
+    </div>
+
   </div><!-- container -->
 </section>
 
-<!-- ******Steps Section****** --> 
-<section class="steps section">
-    <div class="container">
-        <h2 class="title text-center">3 Simple Steps to join TECHRISE Core Immersive</h2>
-        <div class="row">
-             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
-                 <h3 class="title"><span class="number">1</span><br /><span class="text">Sign up for Pre-work</span></h3>
-                 <p>
-                  To get join TECHRISE Core Immersive, sign up for pre-work down below.
-                 </p>
-             </div><!--//step-->
-             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
-                 <h3 class="title"><span class="number">2</span><br /><span class="text">Complete Pre-work</span></h3>
-                 <p>Once you sign up, you will have 4 days to complete a series of assignments. If you complete all of these assignments on time, you will be called in for an admission interview.</p>
-             </div><!--//step-->
-             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
-                 <h3 class="title"><span class="number">3</span><br /><span class="text">Start Your Coding Career</span></h3>
-                 <p>From here, you'll be skyrocketing. Build projects, have a personal mentor, learn from peers, and become a successful web developer.</p>
-             </div><!--//step-->
-        </div><!--//row-->
-        
-        <div class="text-center"><%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary' %></div>
-        
-    </div><!--//container-->        
-</section><!--//steps-->
+<%= render 'comparison_chart' %>
 
