--- a/app/views/courses/_progress.html.erb
+++ b/app/views/courses/_progress.html.erb
@@ -30,4 +30,10 @@
 
   </div>
 
+<% else %>
+  <h3 class="text-center">Get started with<br>Intro to Software Engineering</h3>
+
+  <hr/>
+
+  <%= link_to 'Start Course', '/intro_lessons/1', class: 'btn btn-cta-primary btn-block' %>
 <% end %>
