--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,7 +16,7 @@
         <h2 style="letter-spacing: 4px;">Coding Bootcamp in Nepal</h2>
         <h1 class="title">The Fast Track to Learning Web Development</h1>
         
-        <p class="intro" style="font-size: 20px; font-family: 'Lato', sans-serif">
+        <p class="intro" style="font-size: 19px; font-family: 'Lato', sans-serif">
           Learn Ruby on Rails through our interactive platform combining 1 on 1 mentor sessions, project based learning, and a supportive online community. Whether you are a beginner, an entrepreneur, or an aspiring developer - we are there to support you every step of the way.
         </p>
         <p>
@@ -28,6 +28,14 @@
 </section><!--//promo-->
 
 <div class="sections-wrapper">   
+
+  <section class="section section-press text-center">
+    <h3>Featured In</h3>
+
+    <div class="press-images">
+      <%= image_tag 'landing_page/huffpost.png', class: 'img-responsive' %>
+    </div>
+  </section>
 
   <!-- ******Why Section****** -->
   <section id="why" class="section why">
