--- a/app/views/static_pages/_timeline.html.erb
+++ b/app/views/static_pages/_timeline.html.erb
@@ -1,6 +1,6 @@
 <div id="timeline" class="timeline-container">
         <div class="timeline-wrapper">
-                <h2 class="timeline-time">Prework</h2>
+                <h2 class="timeline-time">Track 1: Intro to Software Engineering</h2>
 
                 <dl class="timeline-series">
 
@@ -14,16 +14,9 @@
                         <dt class="timeline-event" id="event02"><a>HTML/CSS</a></dt>
                         <dd class="timeline-event-content" id="event02EX">
                                 <p>
-                                  During the pre-work period, you will learn the basics of HTML and CSS. You do not need any prior experience with programming to complete these assignments. The pre-work is completely free, and TECHRISE Mentors will be there to support you at any time.
+                                  Build 4 projects including a personal portfolio page that you can use to boost your professional career. Learn the basics of HTML and CSS.
                                 </p>
                         </dd>
-
-                </dl>
-        </div>
-        <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 1</h2>
-
-                <dl class="timeline-series">
 
                         <dt class="timeline-event" id="event03"><a>Introduction to Bootstrap</a></dt>
                         <dd class="timeline-event-content" id="event03EX">
@@ -37,87 +30,57 @@
                                 <p>
                                   Dive into the fundamentals of the Ruby language. Learning Ruby is fundamental in developing applications with Ruby on Rails.
                                 </p>
-                        </dd>
+                        </dd> 
 
-                        <dt class="timeline-event" id="event05"><a>Master the Command Line</a></dt>
-                        <dd class="timeline-event-content" id="event05EX">
-                                <p>
-                                  In order to navigate smoothly in the terminal, learning how to manipulate the command line is crucial.
-                                </p>
-                        </dd>
+                </dl>
+        </div>
+        <div class="timeline-wrapper">
+                <h2 class="timeline-time">Track 2: Ruby on Rails Application</h2>
+
+                <dl class="timeline-series">
+
+                    <dt class="timeline-event" id="event06"><a>Ideator - An Idea Sharing App</a></dt>
+                    <dd class="timeline-event-content" id="event06EX">
+                            <p>
+                              You'll build an Idea Sharing app using the Ruby on Rails framework, HTML, and CSS. You'll learn the basics of MVC framework, how to use Git for version control, and you'll launch your application live with professional tools.
+                            </p>
+                    </dd>
+
+                    <dt class="timeline-event" id="event07"><a>MVC and Rails</a></dt>
+                    <dd class="timeline-event-content" id="event07EX">
+                            <p>
+                              Learn about what the MVC framework, HTTP Methods, common methods in Ruby on Rails, and how database migrations work in Ruby on Rails.
+                            </p>
+                    </dd>
+                            
 
                 </dl>
         </div>
 
         <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 2 ~ 3</h2>
+                <h2 class="timeline-time">Track 3: User Features and AJAX</h2>
 
                 <dl class="timeline-series">
 
-                        <dt class="timeline-event" id="event06"><a>Ideator - An Idea Sharing App</a></dt>
-                        <dd class="timeline-event-content" id="event06EX">
-                                <p>
-                                  Build your first Ruby on Rails application. This application let's users post and share ideas with others.
-                                </p>
-                        </dd>
+                    <dt class="timeline-event" id="event08"><a>Ruby Core Training</a></dt>
+                    <dd class="timeline-event-content" id="event08EX">
+                            <p>
+                              Dive deeper into the world of Ruby. You will go through a series of training problems and coding challenges to become more familiar with the Ruby language and improve your Ruby skills.
+                            </p>
+                    </dd> 
+
+                    <dt class="timeline-event" id="event09"><a>Instapost - an Instagram Clone</a></dt>
+                    <dd class="timeline-event-content" id="event09EX">
+                            <p>
+                              Build your second application - an Instagram clone. While building this application, you'll learn how to build more complex applications with features such as user authentication, commenting, and the ability for users to like posts. You will touch a little bit about what AJAX is and how you can implement it in Rails applications.
+                            </p>
+                    </dd>
 
                 </dl>
         </div>
 
         <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 3 ~ 4</h2>
-
-                <dl class="timeline-series">
-
-                        <dt class="timeline-event" id="event07"><a>MVC and Rails</a></dt>
-                        <dd class="timeline-event-content" id="event07EX">
-                                <p>
-                                  Learn about what the MVC framework, HTTP Methods, common methods in Ruby on Rails, and how database migrations work in Ruby on Rails.
-                                </p>
-                        </dd>
-
-                        <dt class="timeline-event" id="event08"><a>Ruby Core Training</a></dt>
-                        <dd class="timeline-event-content" id="event08EX">
-                                <p>
-                                  Dive deeper into the world of Ruby. You will go through a series of training problems and coding challenges to become more familiar with the Ruby language and improve your Ruby skills.
-                                </p>
-                        </dd>                  
-
-                </dl>
-        </div>
-
-         <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 4 ~ 5</h2>
-
-                <dl class="timeline-series">
-
-                        <dt class="timeline-event" id="event09"><a>Instapost - an Instagram Clone</a></dt>
-                        <dd class="timeline-event-content" id="event09EX">
-                                <p>
-                                  Build your second application - an Instagram clone. While building this application, you'll learn how to build more complex applications with features such as user authentication, commenting, and the ability for users to like posts. You will touch a little bit about what AJAX is and how you can implement it in Rails applications.
-                                </p>
-                        </dd>
-
-                </dl>
-        </div>
-
-        <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 5 ~ 6</h2>
-
-                <dl class="timeline-series">
-
-                        <dt class="timeline-event" id="event010"><a>RSpec and Testing</a></dt>
-                        <dd class="timeline-event-content" id="event010EX">
-                                <p>
-                                  Learn the basics of testing your applications with the RSpec framework. As a professional developer, it is crucial that you know how to test your applications. You will build a simple blog application with the Test Driven Development (TDD) philosophy.
-                                </p>
-                        </dd>
-
-                </dl>
-        </div>
-
-        <div class="timeline-wrapper">
-                <h2 class="timeline-time">Week 7 ~ 8</h2>
+                <h2 class="timeline-time">Track 4: Javascript and Advanced Rails</h2>
 
                 <dl class="timeline-series">
 
@@ -128,14 +91,27 @@
                                 </p>
                         </dd>
 
+                        <dt class="timeline-event" id="event07"><a>Filmster</a></dt>
+                        <dd class="timeline-event-content" id="event07EX">
+                                <p>
+                                  Build an online movie review web application with a fluid user interface with Javascript and AJAX while implementing software engineering best practices.
+                                </p>
+                        </dd>
+
+                                         
+
                 </dl>
+        </div>
+
+         <div class="timeline-wrapper">
+                <h2 class="timeline-time">Track 5: Test Driven Development</h2>
 
                 <dl class="timeline-series">
 
-                        <dt class="timeline-event" id="event012"><a>Intermediate/Advanced Ruby on Rails</a></dt>
-                        <dd class="timeline-event-content" id="event012EX">
+                        <dt class="timeline-event" id="event010"><a>RSpec and Testing</a></dt>
+                        <dd class="timeline-event-content" id="event010EX">
                                 <p>
-                                  Learn more advanced Ruby on Rails in your final weeks at TECHRISE. You will learn how Ruby on Rails works under the hood, providing you the knowledge necessary to call yourself a Ruby on Rails developer.
+                                  Learn the basics of testing your applications with the RSpec framework. As a professional developer, it is crucial that you know how to test your applications. You will build a simple blog application with the Test Driven Development (TDD) philosophy.
                                 </p>
                         </dd>
 
