--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -42,7 +42,7 @@
   .testimonial-card-break {
     border-top: 1px solid #999;
     width: 70px;
-    margin: 0 auto;
+    margin: 20px auto;
   }
 }
 
