--- a/app/views/static_pages/_testimonials.html.erb
+++ b/app/views/static_pages/_testimonials.html.erb
@@ -58,7 +58,7 @@
 
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="testimonial-card">
-            <figure class="profile"><%= image_tag 'landing_page/Aashik.jpg' %></figure>
+            <figure class="profile"><%= image_tag 'landing_page/aashik.jpg' %></figure>
             <div class="content">
                 <p><strong>Aashik Yadav</strong>, <span class="college">Student at Swastik College</span></p>
 
