--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -127,7 +127,7 @@
                   </div>
                   <div class="quote">
                       <div class="quote-profile">
-                          <%= image_tag 'landing_page/Aashik.jpg', class: 'img-responsive img-circle' %>
+                          <%= image_tag 'landing_page/aashik.jpg', class: 'img-responsive img-circle' %>
                       </div><!--//profile-->
                       <div class="quote-content">
                           <blockquote><p>I found my passionate family here. When I get stuck, my mentors are always there to help me. The group discussion on Slack is awesome. I really feel great to be here at TECHRISE, it changed my life.</p></blockquote>
