--- a/app/views/ruby_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_5.html.erb
@@ -174,11 +174,11 @@ ruby math.rb
 <%= image_tag 'ruby_lessons/math.png', class: 'screenshot' %>
 
 <p>
-  As you can see, the math equations inside <code>#{}</code> ran.
+  As you can see, the math equations inside <code>#{}</code> were evaluated and displayed.
 </p>
 
 <p>
-  You can embed ruby code inside the hashtag and bracket (<code>#{}</code>). <strong>Note that you can only do this when using double quotes (<code>""</code>). This will not work with single quotes (<code>''</code>).
+  You can embed Ruby code inside the hashtag and bracket (<code>#{}</code>), and Ruby will run it and display the results there. <strong>Note that you can only do this when using double quotes (<code>""</code>). This will not work with single quotes (<code>''</code>).
 </p>
 
 
@@ -224,6 +224,7 @@ ruby math.rb
     <li><code>10</code> - <strong>Fixnum</strong> (Integer)</li>
     <li><code>10.0</code> - <strong>Float</strong></li>
   </ul>
+  <li>You can embed Ruby inside a string with <code>#{}</code></li>
   <li>You can calculate the remainder of two numbers that are divided by each other with the modulo <code>%</code> operator</li>
 </ul>
 
