--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -33,6 +33,7 @@
   ol {
     position: relative;
     padding-left: 0px;
+    list-style-type: none;
 
     li {
       position: relative;
@@ -55,6 +56,16 @@
       text-align: center;
       position: absolute;
       top: -3px;
+    }
+
+    ul {
+      li {
+        counter-increment: none;
+
+        &:before {
+          content: none;
+        }
+      }
     }
   }
 }
